--- a/nav.html
+++ b/nav.html
@@ -53,9 +53,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Usluge</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">O nama</a>
-                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            O nama
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="#">FAQ</a>
+                          <a class="dropdown-item" href="#">Another action</a>
+                        </div>
+                      </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 rightnav">
                     <li class="nav-item">
