--- a/nav.html
+++ b/nav.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Barberian</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
         .navbar-brand {
             position: absolute;
@@ -28,17 +31,24 @@
             background-color: #4D3932;
         }
 
-        .leftnav> li {
+        .navbar-left>li {
             padding-right: 40px;
         }
-        .rightnav> li {
+
+        .navbar-right>li {
             padding-left: 40px;
+        }
+
+        .navbar-nav .dropdown .dropdown-menu>a,
+        .navbar-nav .dropdown .dropdown-menu {
+            background-color:#4D3932;
+            color:whitesmoke;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-lg">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">Barberian</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -46,7 +56,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav leftnav">
+                <ul class="navbar-nav navbar-left">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Početna <span class="sr-only">💈</span></a>
                     </li>
@@ -54,16 +64,16 @@
                         <a class="nav-link" href="#">Usluge</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
                             O nama
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">FAQ</a>
-                          <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">FAQ</a>
                         </div>
-                      </li>
+                    </li>
                 </ul>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 rightnav">
+                <ul class="navbar-nav navbar-right">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kontakt informacije</a>
                     </li>
