--- a/nav.html
+++ b/nav.html
@@ -29,6 +29,9 @@
             border-radius: 10px;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             background-color: #4D3932;
+            border-bottom: 3px solid red;
+
+
         }
 
         .navbar-left>li {
