--- a/faq i nav/nav.html
+++ b/faq i nav/nav.html
@@ -11,15 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
-        .navbar-brand {
-            position: absolute;
-            width: 100%;
-            left: 0;
-            text-align: center;
-            margin: 0 auto;
-        }
-
-        .navbar-toggle {
+         .navbar-toggle {
             z-index: 3;
         }
 
@@ -44,8 +36,8 @@
 
         .navbar-nav .dropdown .dropdown-menu>a,
         .navbar-nav .dropdown .dropdown-menu {
-            background-color:#4D3932;
-            color:whitesmoke;
+            background-color: #4D3932;
+            color: whitesmoke;
         }
     </style>
 </head>
@@ -61,18 +53,20 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav navbar-left">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Početna <span class="sr-only">💈</span></a>
+                        <a class="nav-link" href="../pocetna i o nama/pocetna.html">Početna </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Usluge</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#"
+                            id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
                             O nama
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">FAQ</a>
+                            <a class="dropdown-item" href="../pocetna i o nama/onama.html">O nama</a>
+                            <a class="dropdown-item" href="../faq i nav/faq.html">FAQ</a>
                         </div>
                     </li>
                 </ul>
