--- a/faq i nav/faq.html
+++ b/faq i nav/faq.html
@@ -11,14 +11,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
-        .navbar-brand {
-            position: absolute;
-            width: 100%;
-            left: 0;
-            text-align: center;
-            margin: 0 auto;
-        }
-
         .navbar-toggle {
             z-index: 3;
         }
@@ -56,6 +48,7 @@
             padding-top: 00px;
             background-color: #857570;
         }
+
         .faq {
             background-color: #2c4a53;
             color: whitesmoke;
@@ -66,7 +59,8 @@
             -moz-border-radius: 10px;
             border-radius: 10px;
         }
-        .slika{
+
+        .slika {
             padding-top: 2%;
             padding-bottom: 2%;
         }
@@ -84,18 +78,20 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav navbar-left">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Početna <span class="sr-only">💈</span></a>
+                        <a class="nav-link" href="../pocetna i o nama/pocetna.html">Početna </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Usluge</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#"
+                            id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
                             O nama
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">FAQ</a>
+                            <a class="dropdown-item" href="../pocetna i o nama/onama.html">O nama</a>
+                            <a class="dropdown-item" href="../faq i nav/faq.html">FAQ</a>
                         </div>
                     </li>
                 </ul>
